--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,11 +78,11 @@
   --popover-foreground: 0, 0%, 0%;
   --primary: 0, 0%, 0%;
   --primary-foreground: 0, 0%, 100%;
-  --secondary: 344 45% 45%;
+  --secondary: 0,0%,100%;
   --secondary-foreground: 0, 0%, 100%;
   --muted: 51 100% 20%;
   --muted-foreground: 344 73% 70%;
-  --accent: 344 44% 62%;
+  --accent: 0,0%,100%;
   --accent-foreground: 0, 0%, 100%;
   --destructive: 0 85% 60%;
   --destructive-foreground: 0, 0%, 0%;
